# orcai-mcp

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
cli/: main.py  migrate.py
examples/agents/: backend-dev.md  frontend-dev.md
examples/nginx/: local.conf  remote.conf
examples/skills/: react-component.md
examples/skills/react-component/: SKILL.md
spec/: mcp-agent-manager-spec.md
src/: agent_registry.py  agent_runner.py  auth.py  config.py  database.py  logging_config.py  main.py  mcp_delegate.py  mcp_server.py  memory_manager.py  models.py  rest_api.py  skill_manager.py  task_engine.py  wakeup_scheduler.py
tests/: conftest.py  test_agent_delegation.py  test_agent_registry.py  test_agent_runner.py  test_cli.py  test_e2e_http.py  test_e2e_mcp_tools.py  test_graceful_shutdown.py  test_mcp_delegate.py  test_mcp_tools.py  test_memory_manager.py  test_migrate.py  test_rest_api.py  test_retry.py  test_skill_manager.py  test_task_engine.py  test_wakeup_scheduler.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  index.css  vite-env.d.ts
ui/src/api/: agents.ts  client.ts  dashboard.ts  skills.ts  tasks.ts
ui/src/components/: Drawer.tsx  EmptyState.tsx  Input.tsx  Layout.tsx  StatCard.tsx  StatusBadge.tsx
ui/src/pages/: Agents.tsx  Dashboard.tsx  Settings.tsx  Skills.tsx  Tasks.tsx
ui/src/types/: index.ts
ui/src/utils/: time.ts
