[project]
name = "orcai-mcp"
version = "0.1.0"
description = "Self-hostable MCP sub-agent manager for Claude Code and Cursor"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["mcp", "ai", "agents", "claude", "cursor", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/quieromas-ai/orcai-mcp"
Repository = "https://github.com/quieromas-ai/orcai-mcp"
Issues = "https://github.com/quieromas-ai/orcai-mcp/issues"

[project.scripts]
orcai-mcp = "cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "cli"]
exclude = ["tests", "spec", "ui/src", "ui/node_modules", "examples"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
